--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <h1>Will you be my Valentine? 💕</h1>
+  <h1>Will you be my Valentine FOREVER ? 💕</h1>
 
   <button id="yes" onclick="yesClicked()">YES ❤️</button>
   <button id="no" onmouseover="moveNo()">NO 🙄</button>
@@ -45,9 +45,9 @@
     function yesClicked() {
       document.body.innerHTML = `
         <h1>I knew it 😍❤️</h1>
-        <p>You just made my day.</p>
-        <p>Happy Valentine’s Day 💖</p>
-        <p>— Mrudul</p>
+        <p>You just made my day.By not putting so much effort on clicking No or may be you never wanted to click on "NO" maybe</p>
+        <p>Happy Valentine’s Day sweetheart💖 wanted to make you feel a bit special this time idk nek nachutundi ani ankuntuna no promises again but just as always chepali anpinchindi everyother day is a valentines day harshu yes i am including fights , yes i'm including your silence also attimes mine because without amy emotion things won't feel like how they are, if we both dosen't have the emotion towards eachother then there is no reason for us to fight or whatever "We will fight for coming back together" i hate you <<<< i love youu 😘😘 </p>
+        <p>— Mrudul💞Harshu </p>
       `;
     }
 
