--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   <h1>Will you be my Valentine FOREVER ? 💕</h1>
 
   <button id="yes" onclick="yesClicked()">YES ❤️</button>
-  <button id="no" onmouseover="moveNo()">NO 🙄</button>
+  <button id="no" onmouseover="moveNo()" onclick="moveNo()">NO 🙄</button>
+
 
   <script>
     function yesClicked() {
